<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.anh.movie.screen.login.LoginViewModel"
            />

        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/dp_10"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:textColorHighlight="#ff0000"
            android:textColorHint="@color/color_gray_"
            android:transitionName="@string/title_username"
            bind:errorText="@{viewModel.usernameError}"
            bind:layout_constraintTop_toTopOf="parent"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_gray_"
                android:hint="@string/title_username"
                android:imeOptions="actionNext"
                android:paddingLeft="@dimen/dp_10"
                android:singleLine="true"
                android:text="@={viewModel.username}"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_gray_"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:textColorHighlight="#ff0000"
            android:textColorHint="@color/color_gray_"
            android:transitionName="@string/title_password"
            bind:errorText="@{viewModel.passwordError}"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/color_gray_"
                android:hint="@string/title_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dp_10"
                android:singleLine="true"
                android:text="@={viewModel.password}"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_gray_"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:buttonTint="@color/color_blue_207"
            android:checked="@={viewModel.rememberAccount}"
            android:text="@string/remember_me"
            android:textColor="@color/color_blue_207"
            android:textSize="@dimen/sp_15"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@color/color_primary"
            android:onClick="@{()-> viewModel.onLoginClick()}"
            android:text="@string/title_login"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_horizontal"
            android:onClick="@{()->viewModel.onClickRegister()}"
            android:text="@string/title_sign_up_now"
            android:textColor="@color/color_black"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
            />
    </LinearLayout>
</layout>