<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.anh.movie.screen.register.RegisterViewModel"
            />

        <import type="android.view.View"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/dp_10"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:textColorHighlight="#ff0000"
                android:textColorHint="@color/color_gray_"
                android:transitionName="@string/title_username"
                bind:errorText="@{viewModel.usernameError}"
                bind:layout_constraintTop_toTopOf="parent"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_gray_"
                    android:enabled="@{viewModel.edit ? false : true}"
                    android:hint="@string/title_username"
                    android:imeOptions="actionNext"
                    android:paddingLeft="@dimen/dp_10"
                    android:singleLine="true"
                    android:text="@={viewModel.username}"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_gray_"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:textColorHighlight="#ff0000"
                android:textColorHint="@color/color_gray_"
                android:transitionName="@string/title_name"
                bind:errorText="@{viewModel.nameError}"
                bind:layout_constraintTop_toTopOf="parent"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_gray_"
                    android:hint="@string/title_name"
                    android:imeOptions="actionNext"
                    android:paddingLeft="@dimen/dp_10"
                    android:singleLine="true"
                    android:text="@={viewModel.name}"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_gray_"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:textColorHighlight="#ff0000"
                android:textColorHint="@color/color_gray_"
                android:transitionName="@string/title_email"
                bind:errorText="@{viewModel.emailError}"
                bind:layout_constraintTop_toTopOf="parent"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_gray_"
                    android:enabled="@{viewModel.edit ? false : true}"
                    android:hint="@string/title_email"
                    android:imeOptions="actionNext"
                    android:paddingLeft="@dimen/dp_10"
                    android:singleLine="true"
                    android:text="@={viewModel.email}"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_gray_"
                    />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{viewModel.edit ? View.VISIBLE : View.GONE}"
                >
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    android:textColorHighlight="#ff0000"
                    android:textColorHint="@color/color_gray_"
                    android:transitionName="@string/old_passowrd"
                    bind:errorText="@{viewModel.passwordError}"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_password_old"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/color_gray_"
                        android:hint="@string/old_passowrd"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:paddingLeft="@dimen/dp_10"
                        android:singleLine="true"
                        android:text="@={viewModel.oldPassword}"
                        android:textColor="@color/color_black"
                        android:textColorHint="@color/color_gray_"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:textColorHighlight="#ff0000"
                android:textColorHint="@color/color_gray_"
                android:transitionName="@string/title_password"
                bind:errorText="@{viewModel.oldPasswordError}"
                >

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/color_gray_"
                    android:hint="@string/title_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_10"
                    android:singleLine="true"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/color_gray_"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:layout_weight="1"
                    android:text="@string/choose_image"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"
                    />
                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:clickable="true"
                    android:onClick="@{()->viewModel.onChooseImage()}"
                    android:scaleType="fitXY"
                    android:src="@drawable/no_image"
                    />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/color_primary"
                android:onClick="@{()-> viewModel.onRegisterClick()}"
                android:text="@{viewModel.buttonName}"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
                />
        </LinearLayout>
    </ScrollView>
</layout>