<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.anh.movie.screen.moviedetail.detail.DetailViewModel"
            />
        <import type="com.anh.movie.utils.LayoutManagers"/>
        <import type="android.view.View"/>
    </data>
    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefreshListener="@{viewModel}"
        app:refreshing="@{viewModel.isLoading}"
        >
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/original_title"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp_15"
                        />
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="24dp"
                        android:text="@{viewModel.movie.originalTitle}"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp_15"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/release_date"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp_15"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{viewModel.movie.date}"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp_15"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/status"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp_15"
                        />
                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@{viewModel.movie.status}"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp_15"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"

                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginLeft="8dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_star_black_24dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@{viewModel.movie.floatNumber}"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/sp_15"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginLeft="8dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/tmdb"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@{String.valueOf(viewModel.movie.tmdbRating)}"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/sp_15"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_marginLeft="8dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/imdb"
                            />
                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@{String.valueOf(viewModel.movie.imdbRating)}"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/sp_15"
                            />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/sp_15"
                        />
                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:rating="@{Float.valueOf(viewModel.score/2)}"
                        android:theme="@style/RatingBar"
                        app:rateListener="@{viewModel}"
                        />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/genres"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_15"
                    />
                <com.cunoraz.tagview.TagView
                    android:id="@+id/tag_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    app:lineMargin="5dp"
                    app:setTags="@{viewModel.movie.tagName}"
                    app:tagListener="@{viewModel.listener}"
                    app:tagMargin="5dp"
                    app:textPaddingBottom="5dp"
                    app:textPaddingLeft="8dp"
                    app:textPaddingRight="8dp"
                    app:textPaddingTop="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/overview"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/sp_15"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.movie.overview}"
                    />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</layout>